Problem #5 complete